@@ -10,6 +10,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.7'
+    id 'org.beryx.jlink' version '2.21.1'
 }
 
 sourceCompatibility = 11
@@ -49,6 +50,23 @@ dependencies {
 
 repositories {
     mavenCentral()
+}
+jlink {
+    addExtraDependencies("javafx")
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'whatwebfx'
+
+        jvmArgs = [
+                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons",'-Dlog4j.configurationFile=./log4j2.xml'
+        ]
+    }
+
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+    }
 }
 
 run {
